# PiNet_Web_Dashboard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.tailscale.oracle.yaml  docker-compose.tailscale.yaml  docker-compose.yaml  pyproject.toml
data/: BRC_hosts.json  hosts.json.example
docs/: IMPLEMENTATION_PLAN.md  SRS.md  sample.BRC_hosts.json
docs/PiNet_API/: README.md  pinet_client.py
src/pinet_web_dashboard/: main.py
src/pinet_web_dashboard/clients/: pinet_client.py
src/pinet_web_dashboard/static/css/: style.css
src/pinet_web_dashboard/static/js/: app.js
src/pinet_web_dashboard/templates/: error.html  index.html
